infra/k8s/base/hims-platform.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hims
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cerbos
  namespace: himsv2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cerbos
  template:
    metadata:
      labels:
        app: cerbos
    spec:
      imagePullSecrets:
        - name: gitlab-registry-secret
      nodeSelector:
       agentpool: himsv2
      containers:
        - name: cerbos
          image: acriqline.azurecr.io/cerbos:latest
          ports:
            - name: grpc
              containerPort: 3593
            - name: http
              containerPort: 3592
          livenessProbe:
            httpGet:
              path: /_cerbos/health
              port: http
          readinessProbe:
            httpGet:
              path: /_cerbos/health
              port: http
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: cerbos
  namespace: himsv2
spec:
  selector:
    app: cerbos
  ports:
    - name: grpc
      port: 3593
      targetPort: grpc
    - name: http
      port: 3592
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff
  namespace: himsv2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bff
  template:
    metadata:
      labels:
        app: bff
    spec:
      imagePullSecrets:
        - name: gitlab-registry-secret
      nodeSelector:
       agentpool: himsv2
      containers:
        - name: bff
          image: acriqline.azurecr.io/bff:replace-me
          ports:
            - name: http
              containerPort: 3000
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: bff
  namespace: himsv2
spec:
  selector:
    app: bff
  ports:
    - name: http
      port: 3000
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: himsv2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      imagePullSecrets:
        - name: gitlab-registry-secret
      nodeSelector:
       agentpool: himsv2
      containers:
        - name: web
          image: acriqline.azurecr.io/web:replace-me
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: himsv2
spec:
  selector:
    app: web
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: configurator-svc
  namespace: himsv2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: configurator-svc
  template:
    metadata:
      labels:
        app: configurator-svc
    spec:
      imagePullSecrets:
        - name: gitlab-registry-secret
      nodeSelector:
       agentpool: himsv2
      containers:
        - name: configurator-svc
          image: acriqline.azurecr.io/configurator-svc:replace-me
          ports:
            - name: http
              containerPort: 3001
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: configurator-svc
  namespace: himsv2
spec:
  selector:
    app: configurator-svc
  ports:
    - name: http
      port: 3001
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: empi-svc
  namespace: himsv2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: empi-svc
  template:
    metadata:
      labels:
        app: empi-svc
    spec:
      imagePullSecrets:
        - name: gitlab-registry-secret
      nodeSelector:
       agentpool: himsv2
      containers:
        - name: empi-svc
          image: acriqline.azurecr.io/empi-svc:replace-me
          ports:
            - name: http
              containerPort: 3002
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: empi-svc
  namespace: himsv2
spec:
  selector:
    app: empi-svc
  ports:
    - name: http
      port: 3002
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-svc
  namespace: himsv2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: billing-svc
  template:
    metadata:
      labels:
        app: billing-svc
    spec:
      imagePullSecrets:
        - name: gitlab-registry-secret
      nodeSelector:
       agentpool: himsv2
      containers:
        - name: billing-svc
          image: acriqline.azurecr.io/billing-svc:replace-me
          ports:
            - name: http
              containerPort: 3003
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: billing-svc
  namespace: himsv2
spec:
  selector:
    app: billing-svc
  ports:
    - name: http
      port: 3003
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registration-svc
  namespace: himsv2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registration-svc
  template:
    metadata:
      labels:
        app: registration-svc
    spec:
      imagePullSecrets:
        - name: gitlab-registry-secret
      nodeSelector:
       agentpool: himsv2
      containers:
        - name: registration-svc
          image: acriqline.azurecr.io/registration-svc:replace-me
          ports:
            - name: http
              containerPort: 3006
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: registration-svc
  namespace: himsv2
spec:
  selector:
    app: registration-svc
  ports:
    - name: http
      port: 3006
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-management-svc
  namespace: himsv2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-management-svc
  template:
    metadata:
      labels:
        app: user-management-svc
    spec:
      imagePullSecrets:
        - name: gitlab-registry-secret
      nodeSelector:
       agentpool: himsv2
      containers:
        - name: user-management-svc
          image: acriqline.azurecr.io/user-management-svc:replace-me
          ports:
            - name: http
              containerPort: 3005
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
          resources:
            requests:
              cpu: 75m
              memory: 256Mi
            limits:
              cpu: 750m
              memory: 768Mi
---
apiVersion: v1
kind: Service
metadata:
  name: user-management-svc
  namespace: himsv2
spec:
  selector:
    app: user-management-svc
  ports:
    - name: http
      port: 3005
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: abdm-adapter-svc
  namespace: himsv2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: abdm-adapter-svc
  template:
    metadata:
      labels:
        app: abdm-adapter-svc
    spec:
      imagePullSecrets:
        - name: gitlab-registry-secret
      nodeSelector:
       agentpool: himsv2
      containers:
        - name: abdm-adapter-svc
          image: acriqline.azurecr.io/abdm-adapter-svc:replace-me
          ports:
            - name: http
              containerPort: 3007
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
          resources:
            requests:
              cpu: 75m
              memory: 256Mi
            limits:
              cpu: 750m
              memory: 768Mi
---
apiVersion: v1
kind: Service
metadata:
  name: abdm-adapter-svc
  namespace: himsv2
spec:
  selector:
    app: abdm-adapter-svc
  ports:
    - name: http
      port: 3007
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: master-data
  namespace: himsv2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: master-data
  template:
    metadata:
      labels:
        app: master-data
    spec:
      imagePullSecrets:
        - name: gitlab-registry-secret
      nodeSelector:
       agentpool: himsv2
      containers:
        - name: master-data
          image: acriqline.azurecr.io/master-data:replace-me
          ports:
            - name: http
              containerPort: 8010
          livenessProbe:
            httpGet:
              path: /api/v1/master-data/health
              port: http
          readinessProbe:
            httpGet:
              path: /api/v1/master-data/health
              port: http
          resources:
            requests:
              cpu: 75m
              memory: 256Mi
            limits:
              cpu: 750m
              memory: 768Mi
---
apiVersion: v1
kind: Service
metadata:
  name: master-data
  namespace: himsv2
spec:
  selector:
    app: master-data
  ports:
    - name: http
      port: 8010
      targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hims
  namespace: himsv2
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
spec:
  ingressClassName: nginx
  rules:
    - host: hims.example.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: bff
                port:
                  number: 3000
          - path: /_cerbos
            pathType: Prefix
            backend:
              service:
                name: cerbos
                port:
                  number: 3592
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
